# OuYangMinOa-Xiao-Xia-rust

./: .env_example  .gitignore  Cargo.toml  Dockerfile  README.md
data/: 金莎 - 愛的魔法『她們說你有點壞，追你的女生都很傷心。』【動態歌詞Lyrics】 [8EIeK68l0VU].opus
src/: framework.rs  info.rs  main.rs
src/commands/: client.rs  event.rs  help.rs  mod.rs  music.rs  utils.rs
src/data/: info.rs  lang.rs  mod.rs
src/refer/: mod.rs
