[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-sleep="0.4.1"
dotenv_codegen="0.15.0"
poise="0.5.2"
serenity = { features = [ "voice","model"], version = "^0.11.0", default-features = false }
songbird = { version = "0.3.2", features = [ "builtin-queue"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait="*"
humantime="*"
url="*"

youtube_dl ={ version="0.9.0" , features=["tokio"]}
serde_json="*"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]