[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
ctrlc = "3.4"
libc="0.2.153"
async-sleep="0.4.1"
dotenv_codegen="0.15.0"
poise="0.5.2"
serenity = { features = [ "voice","model"], version = "^0.11.0", default-features = false }
songbird = { version = "0.3.2", features = [ "builtin-queue"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait="*"
humantime="*"
url="*"

youtube_dl ={ version="0.9.0" , features=["tokio"]}
serde_json="*"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]