[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "*"
ctrlc = "3.4"
reqwest = "*"
glob = "0.3.1"
poise = "0.5.2"
humantime = "*"
serde_json = "*"
async-trait = "*"
async-sleep = "0.4.1"
dotenv_codegen = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.2", features = ["derive"] }
youtube_dl = { version="0.9.0" , features=["tokio"]}
songbird = { version = "0.3.2", features = [ "builtin-queue"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
serenity = { features = [ "voice","model"], version = "^0.11.0", default-features = false }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
